# brocc

./: .cursorrules  .gitignore  CONTRIBUTING.md  DEVELOPING.md  LICENSE.md  NOTES.md  README.md
cli/: Makefile  README.md  package.json  pyproject.toml
cli/example-docs/: simple.md
cli/frontend/: index.html  package.json  vite.config.ts
cli/frontend/src/: App.tsx
cli/frontend/src/components/: chrome-status.tsx  status.tsx
cli/scripts/: clear_db.py  dbdir.py  dbui.py  validate-unstructured.py
cli/src/brocc_li/: chrome_cdp.py  chrome_manager.py  chrome_tabs.py  doc_db.py  entry_points.py  extract.py  extract_feed.py  fastapi_auth.py  fastapi_chrome.py  fastapi_server.py  fastapi_webview.py  frontend_server.py  html_to_md.py  merge_md.py  playwright_fallback.py
cli/src/brocc_li/cli/: api_health.py  app.py  app.tcss  auth.py  config_dir.py  fastapi_server.py  fasthtml_server.py  info_panel.py  logs_panel.py  open_webview.py  server.py  service_status.py  systray.py  systray_launcher.py  systray_process.py  webapp_server.py  webui.py  webview_launcher.py  webview_manager.py  webview_process.py
cli/src/brocc_li/cli/textual_ui/: __init__.py  info_panel.py  info_panel.tcss  logs_panel.py  logs_panel.tcss
cli/src/brocc_li/embed/: chunk_header.py  chunk_markdown.py  embed_inputs.py  voyage.py
cli/src/brocc_li/extract/: adjust_timeout_counter.py  extract_field.py  extract_navigate_content.py  extract_schema.py  find_container.py  find_element.py  is_valid_page.py  restore_scroll.py  save_extract_log.py  scroll_strategies.py  wait_for_navigation.py
cli/src/brocc_li/fixtures/: _archive-is.html  _brocc-li.html  _gmail-inbox.html  _linkedin-profile.html  _nytimes-article.html  _nytimes-home.html  _substack-feed.html  _substack-post-paid.html  _unstructured-docs.html  _upstash-login.html  _youtube-home.html  https-docs-unstructured-io-open-source-core-functionality-partitioning.html  https-github-com-substratelabs-brocc-blob-main-site-scripts-copy-readme-ts.html  https-mail-google-com-mail-u-1-inbox.html  https-public-com-portfolio.html  https-www-google-com-search-q-html5lib-oq-html5lib-gs-lcrp-egzjahjvbwuycqgaeeuyoriabdihcaeqabiabdihcaiqabiabdihcamqabiabdihcaqqabiabdihcauqabiabdincay.html
cli/src/brocc_li/html_to_md/: twitter.py
cli/src/brocc_li/parsers/: bsky_feed.py  bsky_followers.py  bsky_profile.py  bsky_utils.py  gmail_inbox.py  instagram_explore.py  instagram_explore_search.py  instagram_home.py  instagram_inbox.py  instagram_profile.py  instagram_saved_collection.py  instagram_utils.py  linkedin_company.py  linkedin_company_about.py  linkedin_company_people.py  linkedin_company_posts.py  linkedin_connections_me.py  linkedin_feed.py  linkedin_feed_v2.py  linkedin_followers.py  linkedin_messages.py  linkedin_profile.py  linkedin_search_connections.py  linkedin_utils.py  soup_utils.py  substack_activity.py  substack_feed.py  substack_inbox.py  substack_utils.py  threads_activity.py  threads_home.py  threads_utils.py  twitter_bookmarks.py  twitter_home.py  twitter_inbox.py  twitter_likes.py  twitter_profile.py  twitter_profile_followers.py  twitter_thread.py  twitter_utils.py  (+4 more)
cli/src/brocc_li/scroll_prototype/: adjust_timeout_counter.py  extract_markdown.py  extract_navigate_content.py  extract_schema.py  find_element.py  human_scroll.py  rate_limit_backoff_s.py  scroll_strategies.py  substack_inbox.py  twitter_feed.py  wait_for_navigation.py
cli/src/brocc_li/sources/: substack.py  substack_inbox.py  twitter.py
cli/src/brocc_li/static/: index.html
cli/src/brocc_li/static/assets/: index-7wm1xg6N.css  index-B5qud3GA.js  index-BABGL5hw.js  index-BBSD-_Pd.js  index-BLavfg7a.js  index-Ba4qmnF8.css  index-BzCdpo0H.js  index-CYC7oZhd.css  index-CcSUsrIY.js  index-CczPOjMh.js  index-CduJQ-pV.js  index-CfWHv8lv.css  index-CpITab1m.js  index-CrVYlqSy.js  index-CsHAzNPc.css  index-CvK9rOsA.css  index-CyCa98H4.js  index-D-df6uy1.css  index-D5aHjHCE.js  index-DDKEN0Dr.css  index-DVMktlmf.js  index-DYezN6i_.js  index-Dw4--IHg.js  index-OtRkMmSU.css  index-ZFPmxsWv.css  index-bzbOXWNo.js  index-cCieF6Pm.css  index-dDbhtvsw.css  index-obKINAfK.css  index-r1M-9gZI.js
cli/src/brocc_li/tests/: generate_test_markdown.py  test_auth_data.py  test_chunk_equality.py  test_chunk_header.py  test_chunk_markdown.py  test_doc.py  test_doc_db.py  test_doc_db_lance.py  test_doc_db_schema.py  test_embed_header.py  test_embed_inputs.py  test_geolocation.py  test_html_metadata.py  test_html_to_md.py  test_html_to_md_parsers.py  test_html_to_md_twitter.py  test_image_utils.py  test_linkedin_company.py  test_linkedin_company_about.py  test_linkedin_company_posts.py  test_linkedin_feed.py  test_linkedin_profile.py  test_location.py  test_merge_md.py  test_normalize_url.py  test_prepare_storage.py  test_pydantic_to_sql.py  test_serde.py  test_slugify.py  test_timestamp.py  test_twitter_home.py  test_twitter_likes.py  test_twitter_thread.py
cli/src/brocc_li/tests/html_fixtures/: _anthropic-blog.html  _arxiv-pdf.html  _bsky-feed.html  _bsky-followers.html  _bsky-follows.html  _bsky-profile.html  _github-repo.html  _gmail-inbox-thread.html  _hackernews-feed.html  _instagram-explore-search.html  _instagram-followers.html  _instagram-following.html  _instagram-home.html  _instagram-profile.html  _instagram-saved-collection.html  _instagram-saved.html  _linkedin-company-about.html  _linkedin-company-feed.html  _linkedin-company-people.html  _linkedin-company-posts.html  _linkedin-company.html  _linkedin-connections-me.html  _linkedin-feed-2.html  _linkedin-feed-3.html  _linkedin-feed.html  _linkedin-followers.html  (+39 more)
cli/src/brocc_li/types/: doc.py  extract_feed_config.py  extract_field.py
cli/src/brocc_li/utils/: api_url.py  auth_data.py  chrome.py  chunk_equality.py  constants.py  display_result.py  geolocation.py  html_metadata.py  image_utils.py  location.py  logger.py  normalize_url.py  prepare_storage.py  pydantic_to_sql.py  random_delay.py  serde.py  slugify.py  timestamp.py  version.py  version_check.py
cli/src/scripts/: format.py
cli/tests/parsers/: test_twitter_likes.py
(+202 files in other folders)
